--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
 
             "styles": [
               "node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css" ,
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
