--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "create404": "create404.bat",
-    "build": "ng build --prod --output-path docs --base-href /timesheet/",
+    "build": "ng build --prod",
     "buildAndCreate404": "npm run build && npm run create404",
     "test": "ng test",
     "lint": "ng lint",
