--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.4",
+    "primeng": "^9.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "uuid": "^3.4.0",
